# myutils

./: .gitignore  README.md  adder_test.c
OneLineReorderer/: OneLineReorderer.sln
OneLineReorderer/OneLineReorderer/: OneLineReorderer.vcxproj  main.c
bidi_tryouts/: README.md  bidi_concept1.c  bidi_concept2.c  bidi_concept3.c  bidi_concept3_run.c
bidi_tryouts/concept3/: BiDi_Concept1.sln  BiDi_Concept1.vcxproj  BiDi_Concept1.vcxproj.filters  bidi_concept3.c  bidi_concept3.h  bidi_concept3_run.c
nt5_themeinst/: example_ini.ini  installer.c
rostestprogs/ETO_GCP_BIDI/dummy/: AboutDialog.c  AboutDialog.h  CMakeLists.txt  Globals.h  MainWindow.c  MainWindow.h  Resource.rc  WinMain.c
unigen/: Program.cs  getuname_test.cpp  unigen.csproj  unigen.sln
unigen/Properties/: AssemblyInfo.cs
